--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Leo Photo</title>
+    <title>Tio Samuca</title>
     <!--Link css-->
     <link rel="stylesheet" href="assets/css/style.css">
     <!--Link para os efeitos do slide-->
@@ -18,7 +18,7 @@
     <!--carregando a pagina-->
     <div id="carregando"></div>
     <header data-aos="fade-down">
-        <a href="index.html" class="logo-name">LEOSANDRO FOTOGRAFIA</a>
+        <a href="index.html" class="logo-name">TIO SAMUCA</a>
         <nav class="second-header">
             <ul class="nav-menu">
                 <li data-aos="fade-right">
@@ -43,12 +43,20 @@
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
                 <!-- Slides -->
-                <div class="swiper-slide"><img src="vetor/imagens/sliders/slide-1.jpg" alt="slide"></div>
-                <div class="swiper-slide"><img src="vetor/imagens/sliders/slide-2.jpg" alt="slide"></div>
-                <div class="swiper-slide"><img src="vetor/imagens/sliders/slide-3.jpg" alt="slide"></div>
-                <div class="swiper-slide"><img src="vetor/imagens/sliders/slide-4.jpg" alt="slide"></div>
+                <div class="swiper-slide">
+                    <img src="vetor/imagens/sliders/slide-1.jpg" alt="slide">
+                </div>
+                <div class="swiper-slide">
+                    <img src="vetor/imagens/sliders/slide-2.jpg" alt="slide">
+                </div>
+                <div class="swiper-slide">
+                    <img src="vetor/imagens/sliders/slide-3.jpg" alt="slide">
+                </div>
+                <div class="swiper-slide">
+                    <img src="vetor/imagens/sliders/slide-4.jpg" alt="slide">
+                </div>
             </div>
-
+            fff
             <!-- If we need pagination -->
             <div class="swiper-pagination"></div>
         
@@ -59,7 +67,6 @@
             <!-- If we need scrollbar -->
             <div class="swiper-scrollbar"></div>
         </div>
-        <h1 class="big-heading" data-aos="fade-up">LEOSANDRO FOTOGRAFIA</h1>
     </section>
     <div class="second-header">
         <div class="dropdown" >
@@ -98,23 +105,28 @@
                 </a>
             </div>
             <div class="album-photo" data-aos="fade-up">
-                <a href="vetor/imagens/discover/discover.jpg" data-lightbox="models" data-title="Imagem 4">
-                    <img src="vetor/imagens/discover/discover.jpg" alt="discover">
+                <a href="vetor/imagens/discover/discover-3.jpg" data-lightbox="models" data-title="Imagem 3">
+                    <img src="vetor/imagens/discover/discover-3.jpg" alt="discover-3">
                 </a>
             </div>
             <div class="album-photo" data-aos="fade-up">
-                <a href="vetor/imagens/discover/discover-7.jpg" data-lightbox="models" data-title="Imagem 7">
-                    <img src="vetor/imagens/discover/discover-7.jpg" alt="discover-7">
-                </a>
-            </div>
-            <div class="album-photo" data-aos="fade-up">
-                <a href="vetor/imagens/discover/discover-6.jpg" data-lightbox="models" data-title="Imagem 6">
-                    <img src="vetor/imagens/discover/discover-6.jpg" alt="discover-6">
+                <a href="vetor/imagens/discover/discover-4.jpg" data-lightbox="models" data-title="Imagem 4">
+                    <img src="vetor/imagens/discover/discover-4.jpg" alt="discover-4">
                 </a>
             </div>
             <div class="album-photo" data-aos="fade-up">
                 <a href="vetor/imagens/discover/discover-5.jpg" data-lightbox="models" data-title="Imagem 5">
                     <img src="vetor/imagens/discover/discover-5.jpg" alt="discover-5">
+                </a>
+            </div>
+            <div class="album-photo" data-aos="fade-up">
+                <a href="vetor/imagens/discover/discover-6.jpg" data-lightbox="models" data-title="Imagem 6">
+                    <img src="vetor/imagens/discover/discover-6.jpg" alt="discover-5">
+                </a>
+            </div>
+            <div class="album-photo" data-aos="fade-up">
+                <a href="vetor/imagens/discover/discover-7.jpg" data-lightbox="models" data-title="Imagem 7">
+                    <img src="vetor/imagens/discover/discover-7.jpg" alt="discover-7">
                 </a>
             </div>
             <div class="album-photo" data-aos="fade-up">
@@ -142,11 +154,6 @@
                     <img src="vetor/imagens/discover/discover-12.jpg" alt="discover-12">
                 </a>
             </div>
-            <div class="album-photo" data-aos="fade-up">
-                <a href="vetor/imagens/discover/discover-13.jpg" data-lightbox="models" data-title="Imagem 13">
-                    <img src="vetor/imagens/discover/discover-13.jpg" alt="discover-13">
-                </a>
-            </div>
         </div>
     </section>
     <button class="scrolltop" onclick="backTop()">
@@ -154,7 +161,7 @@
     </button>
     <footer>
         <div class="rodape">
-            <span>© 2022 Leosandro Fotografia – All rights reserved.</span>
+            <span>© 2022 Tio Samuca – All rights reserved.</span>
             <a href="https://nicodesn.github.io/portfolio/" target="_blank">Powered By Nicode</a>
         </div>
     </footer>
