--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tio Samuca</title>
+    <title>Lukarte</title>
     <!--Link css-->
     <link rel="stylesheet" href="assets/css/style.css">
     <!--Link para os efeitos do slide-->
@@ -18,7 +18,7 @@
     <!--carregando a pagina-->
     <div id="carregando"></div>
     <header data-aos="fade-down">
-        <a href="index.html" class="logo-name">TIO SAMUCA</a>
+        <a href="index.html" class="logo-name">LUKARTE</a>
         <nav class="second-header">
             <ul class="nav-menu">
                 <li data-aos="fade-right">
@@ -161,8 +161,8 @@
     </button>
     <footer>
         <div class="rodape">
-            <span>© 2022 Tio Samuca – All rights reserved.</span>
-            <a href="https://nicodesn.github.io/portfolio/" target="_blank">Powered By Nicode</a>
+            <span>© 2022 Lukarte– All rights reserved.</span>
+            <a href="https://nicodesn.github.io/portfolio/" target="_blank">Powered By nicodesn</a>
         </div>
     </footer>
     <!--swiper slide-->
