--- a/orcamento/orcamento.html
+++ b/orcamento/orcamento.html
@@ -95,7 +95,7 @@
                     <label for="lname">Me fale um pouco sobre você e como imagina suas fotos</label><br>
                     <input type="text" id="lname" name="about">
                 </div>
-                <button type="submit">Enviar</button>
+                <button type="submit"><a href="mailto:name@email.com">Enviar</a></button>
             </form>
         </div>
     </section>
